cloudformation/web_tier/non_iam.yml
Description: >
    AWS 3 Tier Web Application -- web tier Non-IAM stack 2021 Feb

Parameters:
  S3DeploymentBucket:
    Description: AWS S3 Deployment bucket to hold deployment files
    Type: String
  S3BucketPrefix:
    Description: AWS S3 bucket prefix
    Type: String
  EnvironmentName:
    Description: An environment name that will be prefixed
    Type: String
  InfraEnvName:
    Description: AWS Infrastructure Env name
    Type: String
  EC2InstanceProfile:
    Description: EC2 Instace Profile name
    Type: String

Resources:
  LBSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to our load balancer
      VpcId: 
        Fn::ImportValue:
          !Sub "${InfraEnvName}-VPCID"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: SERVICE_CREATOR
          Value: eliu
        - Key: SERVICE_CATEGORY
          Value: APP

  WebServerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to our hosts and SSH from local
      VpcId: 
        Fn::ImportValue:
          !Sub "${InfraEnvName}-VPCID"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: SERVICE_CREATOR
          Value: eliu
        - Key: SERVICE_CATEGORY
          Value: APP

  WebLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: WebTierLaunchTemplate
      LaunchTemplateData:
        DisableApiTermination: true
        ImageId: ami-077e2265a5d4d2362 
        KeyName: web_app_test
        InstanceType: t3.small
        IamInstanceProfile:
          Name: ec2_iam_debug_demo #!Ref EC2InstanceProfile
        BlockDeviceMappings:
        - DeviceName: "/dev/xvda"
          Ebs:
            VolumeSize: 15
            VolumeType: 'gp2'
        - DeviceName: "/dev/xvdf"
          Ebs:
            VolumeSize: 30
            VolumeType: 'gp2'
        SecurityGroupIds:
          - !Ref WebServerSecGroup
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash 
            apt-get update -y
            curl -fsSL https://deb.nodesource.com/setup_14.x | sudo -E bash -
            apt install -y nodejs
            apt-get install -y nodejs
            apt-get install -y build-essential
            apt-get install -y wget
            npm install aws-sdk
            aws s3 cp s3://${S3DeploymentBucket}/${S3BucketPrefix}/source/bootstrap/user_data.sh .
            chmod +x user_data.sh
            ./user_data.sh
            /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebAutoScalingGroup --region ${AWS::Region}

  WebAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    CreationPolicy:
      ResourceSignal: 
        Timeout: 'PT10M'
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MaxBatchSize: 1
        MinInstancesInService: 1
        PauseTime: 'PT10M'
        WaitOnResourceSignals: true
    Properties:
      VPCZoneIdentifier:
        - Fn::ImportValue: !Sub "${InfraEnvName}-PUB-NETS"
      LaunchTemplate:
        LaunchTemplateId: !Ref WebLaunchTemplate
        Version: !GetAtt WebLaunchTemplate.LatestVersionNumber
      DesiredCapacity: '2'
      MinSize: '2'
      MaxSize: '5'
      TargetGroupARNs:
        - !Ref WebTargetGroup    
      Tags:
        - Key: SERVICE_CREATOR
          Value: eliu
          PropagateAtLaunch: true
        - Key: SERVICE_CATEGORY
          Value: APP
          PropagateAtLaunch: true

  WebLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Subnets:
        - Fn::ImportValue: !Sub "${InfraEnvName}-PUB1-SN"
        - Fn::ImportValue: !Sub "${InfraEnvName}-PUB2-SN"
      SecurityGroups:
        - !Ref LBSecGroup
      Tags:
        - Key: SERVICE_CREATOR
          Value: eliu
        - Key: SERVICE_CATEGORY
          Value: APP

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WebTargetGroup
      LoadBalancerArn: !Ref WebLB
      Port: 80
      Protocol: HTTP

  ALBListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref WebTargetGroup
      Conditions:
        - Field: path-pattern
          Values: [/]
      ListenerArn: !Ref Listener
      Priority: 1

  WebTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 9
      HealthyThresholdCount: 2
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      VpcId:
        Fn::ImportValue:
          !Sub "${InfraEnvName}-VPCID"
      Tags:
        - Key: SERVICE_CREATOR
          Value: eliu
        - Key: SERVICE_CATEGORY
          Value: APP

Outputs:
  WebAutoScalingGroup:
    Description: Web Tier Auto Scaling Group
    Value: !Ref WebAutoScalingGroup
  WebLBName:
    Description: Web Tier Load Balancer Name
    Value: !GetAtt WebLB.LoadBalancerName
  WebLBDnsName:
    Description: Web Tier Load Balancer DNS Value
    Value: !GetAtt WebLB.DNSName
